crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q32_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q32"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                                                                                    |
|               |   Projection: hits.WatchID, hits.ClientIP, count(Int64(1)) AS c, sum(hits.IsRefresh), avg(hits.ResolutionWidth)                                                                                       |
|               |     Aggregate: groupBy=[[hits.WatchID, hits.ClientIP]], aggr=[[count(Int64(1)), sum(CAST(hits.IsRefresh AS Int64)), avg(CAST(hits.ResolutionWidth AS Float64))]]                                      |
|               |       Projection: hits.WatchID, hits.ClientIP, hits.IsRefresh, hits.ResolutionWidth                                                                                                                   |
|               |         Filter: hits.SearchPhrase != LargeUtf8("")                                                                                                                                                    |
|               |           TableScan: hits projection=[WatchID, ClientIP, IsRefresh, ResolutionWidth, SearchPhrase], partial_filters=[hits.SearchPhrase != LargeUtf8("")]                                              |
| physical_plan | SortPreservingMergeExec: [c@2 DESC], fetch=10                                                                                                                                                         |
|               |   ProjectionExec: expr=[WatchID@0 as WatchID, ClientIP@1 as ClientIP, count(Int64(1))@2 as c, sum(hits.IsRefresh)@3 as sum(hits.IsRefresh), avg(hits.ResolutionWidth)@4 as avg(hits.ResolutionWidth)] |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@2 DESC], preserve_partitioning=[true]                                                                                                             |
|               |       AggregateExec: mode=FinalPartitioned, gby=[WatchID@0 as WatchID, ClientIP@1 as ClientIP], aggr=[count(Int64(1)), sum(hits.IsRefresh), avg(hits.ResolutionWidth)]                                |
|               |         RepartitionExec: partitioning=Hash([WatchID@0, ClientIP@1], 16), input_partitions=80                                                                                                          |
|               |           AggregateExec: mode=Partial, gby=[WatchID@0 as WatchID, ClientIP@1 as ClientIP], aggr=[count(Int64(1)), sum(hits.IsRefresh), avg(hits.ResolutionWidth)]                                     |
|               |             FilterExec: SearchPhrase@4 != , projection=[WatchID@0, ClientIP@1, IsRefresh@2, ResolutionWidth@3]                                                                                        |
|               |               SchemaCastScanExec                                                                                                                                                                      |
|               |                 PartitionedUnionExec                                                                                                                                                                  |
|               |                   BytesProcessedExec                                                                                                                                                                  |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                       |
|               |                   BytesProcessedExec                                                                                                                                                                  |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                       |
|               |                   BytesProcessedExec                                                                                                                                                                  |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                       |
|               |                   BytesProcessedExec                                                                                                                                                                  |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                       |
|               |                   BytesProcessedExec                                                                                                                                                                  |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                       |
|               |                                                                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
