crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q34_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q34"
---
+---------------+-------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                      |
+---------------+-------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                        |
|               |   Projection: hits.URL, count(Int64(1)) AS c                                              |
|               |     Aggregate: groupBy=[[hits.URL]], aggr=[[count(Int64(1))]]                             |
|               |       TableScan: hits projection=[URL]                                                    |
| physical_plan | SortPreservingMergeExec: [c@1 DESC], fetch=10                                             |
|               |   ProjectionExec: expr=[URL@0 as URL, count(Int64(1))@1 as c]                             |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@1 DESC], preserve_partitioning=[true] |
|               |       AggregateExec: mode=FinalPartitioned, gby=[URL@0 as URL], aggr=[count(Int64(1))]    |
|               |         RepartitionExec: partitioning=Hash([URL@0], 16), input_partitions=80              |
|               |           AggregateExec: mode=Partial, gby=[URL@0 as URL], aggr=[count(Int64(1))]         |
|               |             SchemaCastScanExec                                                            |
|               |               PartitionedUnionExec                                                        |
|               |                 BytesProcessedExec                                                        |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]             |
|               |                 BytesProcessedExec                                                        |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]             |
|               |                 BytesProcessedExec                                                        |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]             |
|               |                 BytesProcessedExec                                                        |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]             |
|               |                 BytesProcessedExec                                                        |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]             |
|               |                                                                                           |
+---------------+-------------------------------------------------------------------------------------------+
