crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q35_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q35"
---
+---------------+----------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                   |
+---------------+----------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                     |
|               |   Projection: Int64(1), hits.URL, count(Int64(1)) AS c                                 |
|               |     Aggregate: groupBy=[[hits.URL]], aggr=[[count(Int64(1))]]                          |
|               |       TableScan: hits projection=[URL]                                                 |
| physical_plan | SortPreservingMergeExec: [c@2 DESC], fetch=10                                          |
|               |   SortExec: TopK(fetch=10), expr=[c@2 DESC], preserve_partitioning=[true]              |
|               |     ProjectionExec: expr=[1 as Int64(1), URL@0 as URL, count(Int64(1))@1 as c]         |
|               |       AggregateExec: mode=FinalPartitioned, gby=[URL@0 as URL], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([URL@0], 32), input_partitions=160          |
|               |           AggregateExec: mode=Partial, gby=[URL@0 as URL], aggr=[count(Int64(1))]      |
|               |             SchemaCastScanExec                                                         |
|               |               PartitionedUnionExec                                                     |
|               |                 BytesProcessedExec                                                     |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]          |
|               |                 BytesProcessedExec                                                     |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]          |
|               |                 BytesProcessedExec                                                     |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]          |
|               |                 BytesProcessedExec                                                     |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]          |
|               |                 BytesProcessedExec                                                     |
|               |                   DataSourceExec: partitions=32, partition_sizes=[<redacted>]          |
|               |                                                                                        |
+---------------+----------------------------------------------------------------------------------------+
